--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "phpunit/phpunit": "^12.1"
     },
     "require": {
-        "phpmailer/phpmailer": "^6.10"
+        "phpmailer/phpmailer": "^6.10",
+        "dompdf/dompdf": "^3.1"
     }
 }
