--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,16 @@
             "src/Utils/helpers.php"
         ]
     },
+
+    "minimum-stability": "dev",
+
     "require-dev": {
         "phpunit/phpunit": "^12.1"
     },
+
     "require": {
         "phpmailer/phpmailer": "^6.10",
-        "dompdf/dompdf": "^3.1"
+        "dompdf/dompdf": "^3.1",
+        "nfephp-org/sped-da" : "dev-master"
     }
 }
